# capra_bringup

./: .gitignore  CMakeLists.txt  README.md  capra_bringup.py  package.xml
assets/css/: main.css  main.css~
assets/js/: launchmanager.js
controllers/: BaseController.py  HomeController.py  LaunchFilesController.py
views/: base.html  home.html
views/LaunchFiles/: launchmanager.html
