<?xml version="1.0"?>
<package>
  <name>capra_bringup</name>
  <version>0.0.1</version>
  <description>Outils permettant la gestion des fichiers de lancement et de monitorer le robot à distance.</description>
  <maintainer email="capra@clubcapra.com">club capra</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

</package>
